--- a/.env
+++ b/.env
@@ -12,8 +12,10 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=ongkir
-DB_USERNAME=homestead
-DB_PASSWORD=homestead
+DB_USERNAME=distaru
+DB_PASSWORD=distaru
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+JWT_SECRET=9K$8w3k1s3MA!5HJ6BU0PtiLhz$RCZpA
